Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -3222,21 +3222,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#We tested setting the train to train_after_variance_thresholding so that the variance thresholding is taken into account for the model building, but the models produces a less accuate result. Thus we did not make use of variance thresholding in the end."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = train_after_variance_thresholding"
+    "We tested setting the train to train_after_variance_thresholding so that the variance thresholding is taken into account for the model building, but the models produces a less accuate result. Thus we did not make use of variance thresholding in the end."
    ]
   },
   {
@@ -3652,23 +3641,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
    "source": [
-    "# We did not apply variance thresholding to the testing set either. So we did not use "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_submission_set = test_submission_set.loc[:,X_scaled.columns]"
+    "# We did not apply variance thresholding to the testing set either."
    ]
   },
   {
