Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -3646,7 +3646,7 @@
     "scrolled": true
    },
    "source": [
-    "# We did not apply variance thresholding to the testing set either."
+    "We did not apply variance thresholding to the testing set either."
    ]
   },
   {
