Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -4969,7 +4969,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Regression for least squres with best fit line"
+    "##### Regression for least squres with best fit line\n",
+    "\n",
+    "From the above regression line we observe that there is a negative correlation between Weight_Kg and avg_price_per_kg as can be concluded from the negative slope and shape of the line, moving from left to right. We also observe that given y = a + bx, when x = 0, the y-intercecpt is R7."
    ]
   },
   {
@@ -4981,21 +4983,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 1.58, -2.44, -0.89, ..., -1.33, -4.21,  0.63])"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'Y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-b39f7bee67f2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# calculate errors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0merrors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0my_gen2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Y' is not defined"
+     ]
     }
    ],
    "source": [
+    "# calculate errors\n",
     "errors = np.array(Y - y_gen2)\n",
     "np.round(errors, 2)"
    ]
@@ -5103,6 +5107,13 @@
    "metadata": {},
    "source": [
     "### 5.2. A multivariate linear regression model using sklearn Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The multivariate linear regression model (MLR) takes the univariate regression model a step further by adding more p predictor variables to the model. The higher dimensionality of an MLR results in a hyperplane. Given a p-dimensional space, where p > 3, human beings cannot fathom any dimension greater than the third. MLR does this by simply adding an Xj and corresponding Beta_j for each p predictor variable, where j is an element of the set [1,p]."
    ]
   },
   {
