Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -5113,7 +5113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The multivariate linear regression model (MLR) takes the univariate regression model a step further by adding more p predictor variables to the model. The higher dimensionality of an MLR results in a hyperplane. Given a p-dimensional space, where p > 3, human beings cannot fathom any dimension greater than the third. MLR does this by simply adding an Xj and corresponding Beta_j for each p predictor variable, where j is an element of the set [1,p]."
+    "The multivariate linear regression model (MLR) takes the univariate regression model a step further by adding more p predictor variables to the model. The higher dimensionality of an MLR results in a hyperplane. Given a p-dimensional space, where p > 3, human beings cannot fathom any dimension greater than the third. Mathematically, MLR adds p-dimensions simply by adding an Xj and corresponding Beta_j for each p predictor variable, where j is an element of the set [1,p]."
    ]
   },
   {
