Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -5113,6 +5113,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 5.2.1. Description of model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The multivariate linear regression model (MLR) takes the univariate regression model a step further by adding more p predictor variables to the model. The higher dimensionality of an MLR results in a hyperplane. Given a p-dimensional space, where p > 3, human beings cannot fathom any dimension greater than the third. Mathematically, MLR adds p-dimensions simply by adding an Xj and corresponding Beta_j for each p predictor variable, where j is an element of the set [1,p]."
    ]
   },
@@ -5120,7 +5127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.2.1. Building and fitting the model"
+    "#### 5.2.2. Building and fitting the model"
    ]
   },
   {
@@ -5273,7 +5280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.2.2. Assessing our results"
+    "#### 5.2.3. Assessing our results"
    ]
   },
   {
@@ -5311,7 +5318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.2.3. Making predictions on the test data"
+    "#### 5.2.4. Making predictions on the test data"
    ]
   },
   {
