Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -6250,6 +6250,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 5.4.1 Description of the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "SVR tries to find a line/hyperplane (in multidimensional space) that separates two classes. Then it classifies the new point depending on whether it lies on the positive or negative side of the hyperplane depending on the classes to predict.\n",
     "\n",
     "Consider  two  lines as the decision boundary and another line in between the two lines as the hyperplane. Our objective is to basically consider the points that are within the decision boundary line. SVR chooses the  best fit line as the hyperplane that has a maximum number of points.\n",
@@ -6258,8 +6265,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.4.2 Building and fitting the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6268,15 +6282,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Building and fitting the model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6286,41 +6293,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVR(gamma='auto')"
+       "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
+       "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sv_reg_train.fit(X_train,y_train)\n"
+    "sv_reg_train.fit(X_train80,y_train80)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Assess our results"
+    "#### 5.4.3 Assessing our results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  1.1966862296971046\n"
+      "RMSE:  1.7448266774345647\n"
      ]
     }
    ],
@@ -6333,12 +6341,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Making predictions"
+    "#### 5.4.4 Making predictions on the test data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6347,7 +6355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6359,7 +6367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6369,7 +6377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -6401,27 +6409,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>4.565366</td>\n",
+       "      <td>4.899589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>7.930534</td>\n",
+       "      <td>8.065270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>6.140509</td>\n",
+       "      <td>6.390214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>8.608464</td>\n",
+       "      <td>8.649437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>7.051331</td>\n",
+       "      <td>7.032570</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6429,14 +6437,14 @@
       ],
       "text/plain": [
        "   Index  avg_price_per_kg\n",
-       "0      1          4.565366\n",
-       "1      2          7.930534\n",
-       "2      3          6.140509\n",
-       "3      4          8.608464\n",
-       "4      5          7.051331"
+       "0      1          4.899589\n",
+       "1      2          8.065270\n",
+       "2      3          6.390214\n",
+       "3      4          8.649437\n",
+       "4      5          7.032570"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6447,7 +6455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6459,9 +6467,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is clear that the prediction based on support vector regression method is quite accurate and it is more efficient in minimizing the error of the regression model."
+    "#### 5.4.5 Conclusion"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is clear that the prediction based on support vector regression method more accurate compared to the Stats model however The multivariate linear regression model has a lower RMSE compared to SVR. "
+   ]
+  },
+
   {
    "cell_type": "markdown",
    "metadata": {},
