Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -6478,7 +6478,7 @@
    ]
   },
 
-  {
+ {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6489,12 +6489,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 5.5.1 Description of the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Decesion Trees are like a flow-chart-like tree structure where the top of the tree(which is known as the root node) or internal node represents the feauture, the branch represents a decesion rule and each node represents the outcome. Decesion trees partition data into different sections on the basis of the attribute value. It partitions these in a recursive manner called recursive partitioning. The basic idea of a decesion tree algorithm is to select the b est attribute , make that attribute a decesion node and break it into smaller subsets. It then starts the tree building by repeating this process recursively for each child until certain conditions are met.The perfomance of the model is then evaluated. While decesion trees are good for feature engineering such as predicting missing values, they are quite biased and the small variation in the data can result in a different decesion tree but can be reduced by boosting algorithms seen below in the notebook:"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.5.2 Building and fitting the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6511,7 +6525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6521,22 +6535,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(max_depth=3)"
+       "DecisionTreeRegressor(criterion='mse', max_depth=3, max_features=None,\n",
+       "                      max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "                      min_impurity_split=None, min_samples_leaf=1,\n",
+       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "                      presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regr_tree.fit(X_train,y_train)"
+    "regr_tree.fit(X_train80,y_train80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.5.3 Assessing our results"
    ]
   },
   {
@@ -6548,22 +6573,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Evaluating the model perfomance"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  1.516224919030179\n"
+      "RMSE:  1.5180935796989674\n"
      ]
     }
    ],
@@ -6573,15 +6591,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The RMSE for the Decesion Tree model is higher than the RMSE. This shows that the residuals for the Decesion tree model are more  spread out."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6593,7 +6604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6602,7 +6613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6612,7 +6623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -6644,27 +6655,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>4.565366</td>\n",
+       "      <td>4.899589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>7.930534</td>\n",
+       "      <td>8.065270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>6.140509</td>\n",
+       "      <td>6.390214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>8.608464</td>\n",
+       "      <td>8.649437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>7.051331</td>\n",
+       "      <td>7.032570</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6672,14 +6683,14 @@
       ],
       "text/plain": [
        "   Index  avg_price_per_kg\n",
-       "0      1          4.565366\n",
-       "1      2          7.930534\n",
-       "2      3          6.140509\n",
-       "3      4          8.608464\n",
-       "4      5          7.051331"
+       "0      1          4.899589\n",
+       "1      2          8.065270\n",
+       "2      3          6.390214\n",
+       "3      4          8.649437\n",
+       "4      5          7.032570"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6690,7 +6701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -6722,7 +6733,7 @@
        "    <tr>\n",
        "      <th>161</th>\n",
        "      <td>162</td>\n",
-       "      <td>9.387515</td>\n",
+       "      <td>9.380569</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6730,10 +6741,10 @@
       ],
       "text/plain": [
        "     Index  avg_price_per_kg\n",
-       "161    162          9.387515"
+       "161    162          9.380569"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6744,7 +6755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -6774,9 +6785,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>182</td>\n",
-       "      <td>1.791047</td>\n",
+       "      <th>185</th>\n",
+       "      <td>186</td>\n",
+       "      <td>1.93242</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6784,10 +6795,10 @@
       ],
       "text/plain": [
        "     Index  avg_price_per_kg\n",
-       "181    182          1.791047"
+       "185    186           1.93242"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6798,12 +6809,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Saving the DataFrame as as csv\n",
     "DT_submission_DF.to_csv(r'DT_submission.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.5.4 Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The decesion tree model gave an RMSE of 1.518 which is still higher than the RMSE of the the multivariate linear regression model.This shows that the residuals for the Decesion tree model are more  spread out.\n"
    ]
   },
   {
