Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -7333,12 +7333,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.7. Adaboost Classifier"
+    "### 5.8. Adaboost Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.8.1  Description of the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An AdaBoost classifier is a meta-estimator that begins by fitting a classifier on the original dataset and then fits additional copies of the classifier on the same dataset. It can be used in conjunction with many other types of learning algorithms to improve performance. \n",
+    "When used with decision tree learning, information gathered at each stage of the AdaBoost algorithm about the relative difficulty of each training sample is fed into the tree growing algorithm such that later trees tend to focus on problems that are harder to classify."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.8.2 Building and fitting the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7353,7 +7375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7362,7 +7384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7374,27 +7396,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AdaBoostRegressor(base_estimator=DecisionTreeRegressor(max_depth=3))"
+       "AdaBoostRegressor(base_estimator=DecisionTreeRegressor(criterion='mse',\n",
+       "                                                       max_depth=3,\n",
+       "                                                       max_features=None,\n",
+       "                                                       max_leaf_nodes=None,\n",
+       "                                                       min_impurity_decrease=0.0,\n",
+       "                                                       min_impurity_split=None,\n",
+       "                                                       min_samples_leaf=1,\n",
+       "                                                       min_samples_split=2,\n",
+       "                                                       min_weight_fraction_leaf=0.0,\n",
+       "                                                       presort=False,\n",
+       "                                                       random_state=None,\n",
+       "                                                       splitter='best'),\n",
+       "                  learning_rate=1.0, loss='linear', n_estimators=50,\n",
+       "                  random_state=None)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bst_reg.fit(X_train.values,y_train)"
+    "bst_reg.fit(X_train80.values,y_train80)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7403,7 +7438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7412,7 +7447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7423,7 +7458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7435,16 +7470,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BaggingRegressor(base_estimator=DecisionTreeRegressor(max_depth=4))"
+       "BaggingRegressor(base_estimator=DecisionTreeRegressor(criterion='mse',\n",
+       "                                                      max_depth=4,\n",
+       "                                                      max_features=None,\n",
+       "                                                      max_leaf_nodes=None,\n",
+       "                                                      min_impurity_decrease=0.0,\n",
+       "                                                      min_impurity_split=None,\n",
+       "                                                      min_samples_leaf=1,\n",
+       "                                                      min_samples_split=2,\n",
+       "                                                      min_weight_fraction_leaf=0.0,\n",
+       "                                                      presort=False,\n",
+       "                                                      random_state=None,\n",
+       "                                                      splitter='best'),\n",
+       "                 bootstrap=True, bootstrap_features=False, max_features=1.0,\n",
+       "                 max_samples=1.0, n_estimators=10, n_jobs=None, oob_score=False,\n",
+       "                 random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7454,15 +7503,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.8.3 Assessing our results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  1.3687463020654147\n"
+      "RMSE:  1.5046267677667537\n"
      ]
     }
    ],
@@ -7474,7 +7530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7486,7 +7542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7496,7 +7552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7507,7 +7563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 115,
    "metadata": {
     "scrolled": true
    },
@@ -7541,27 +7597,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>8.804111</td>\n",
+       "      <td>8.690175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>8.804111</td>\n",
+       "      <td>8.669875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>8.804111</td>\n",
+       "      <td>8.690175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>8.804111</td>\n",
+       "      <td>8.669875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>8.804111</td>\n",
+       "      <td>8.669875</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -7569,14 +7625,14 @@
       ],
       "text/plain": [
        "   Index  avg_price_per_kg\n",
-       "0      1          8.804111\n",
-       "1      2          8.804111\n",
-       "2      3          8.804111\n",
-       "3      4          8.804111\n",
-       "4      5          8.804111"
+       "0      1          8.690175\n",
+       "1      2          8.669875\n",
+       "2      3          8.690175\n",
+       "3      4          8.669875\n",
+       "4      5          8.669875"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7587,7 +7643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -7619,27 +7675,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>7.983435</td>\n",
+       "      <td>7.339000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>8.665000</td>\n",
+       "      <td>8.145706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>8.068960</td>\n",
+       "      <td>8.278893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>8.180827</td>\n",
+       "      <td>8.263884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>8.180827</td>\n",
+       "      <td>8.145706</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -7647,14 +7703,14 @@
       ],
       "text/plain": [
        "   Index  avg_price_per_kg\n",
-       "0      1          7.983435\n",
-       "1      2          8.665000\n",
-       "2      3          8.068960\n",
-       "3      4          8.180827\n",
-       "4      5          8.180827"
+       "0      1          7.339000\n",
+       "1      2          8.145706\n",
+       "2      3          8.278893\n",
+       "3      4          8.263884\n",
+       "4      5          8.145706"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7665,7 +7721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7674,11 +7730,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "Boost_submission_DF.to_csv(r'Boost_submission.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.8.4 Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The boosting did improve the RMSE of the decesion tree however it is not such a significance "
    ]
   },
   {
