Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -7748,7 +7748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The boosting did improve the RMSE of the decesion tree however it is not such a significance "
+    "The boosting did improve the RMSE of the decesion tree however it is not such a significancant improvement "
    ]
   },
   {
