--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -53,17 +53,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1. Objective \n",
-    "Our objective with this notebook is to design various multivariate regression models using different machine learning techniques to predict the cost of apples based on given historical data. Our objective is further to train our models with the data, to assess our models with training as well as unseen testing data, and to choose the model that best predicts the prices of apples. We also finally need to communicate our findings to an assessment board and to the world."
+    "### 1.1. Problem statement \n",
+    "Sellers of commodities do not know how much to charge for their stock to make for maximum profit. Charging too high will lead to them not selling all their stock and it decaying. Charging too low will mean they cut into their profit."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2. Use \n",
-    "This forms part of a Kaggle competition and is also a team assessment for the students at Explore Data Science Academy.\n",
-    "We hope that our research invested might also be used to further predictions of the prices of commodities and thereby help business in decision making."
+    "### 1.2. Our objective \n",
+    "We want to design various multivariate regression models using different machine learning techniques to predict the cost of apples based on given historical data. \n",
+    "\n",
+    "Our objective is further to train our models with the data, to assess our models, and to choose the model that best predicts the prices of apples. \n",
+    "\n",
+    "We further want to upload our best model to Kaggle in order to encourage competition.\n",
+    "\n",
+    "Finally we will communicate our findings via PowerPoint to an assessment board and via an API hosted in AWS EC2 to the world."
    ]
   },
   {
@@ -84,7 +89,9 @@
    "metadata": {},
    "source": [
     "### 1.4. Data source and descriptions\n",
-    "The data is provided for us on Kaggle in the form of a CSV file which is available to download. The data consists of 10 columns and is described as follows:\n",
+    "Durban Fresh Produce has more than 60 000 transactions on the sale of commodities and has made it available publicly. We will use this data to train our machine learning models on and to assess them by it.\n",
+    "\n",
+    "This data has been made availalbe for us on Kaggle in the form of a CSV file which we could download. The data consists of 10 columns and is described as follows:\n",
     "1. Province - Which province the produce was grown\n",
     "2. Container - The code for the type of container\n",
     "3. Size_Grade - The class of the produce according to their quality\n",
@@ -6477,8 +6484,7 @@
     "It is clear that the prediction based on support vector regression method more accurate compared to the Stats model however The multivariate linear regression model has a lower RMSE compared to SVR. "
    ]
   },
-
- {
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7762,16 +7768,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What we accomplished. \n",
-    "### What we learnt.\n"
+    "### 6.1. Steps we took \n",
+    "We imported, explored, cleaned and split the data for suitable use. Thereafter we built 7 multivariate regression models and assessed them all with unseen data. We also submitted our best model to Kaggle and have built an API and hosted it in EC2 in order to share our finding with the world.\n",
+    "\n",
+    "### 6.2. Our results\n",
+    "At the end of the day the Random Forest Model predicted the most accurately with an RMSE of only 0.40. \n",
+    "\n",
+    "This model placed us 36th out of the 37 teams which participated in the Kaggle competition with the winning team achieving an RMSE of only 0.04. We are grateful that we could participate in this competition and to thereby encourage accurate model building.\n",
+    "\n",
+    "### 6.3. What we learnt\n",
+    "Through this excercise we learned how to prepare data for building and training machine learning models and to to split the data so that we can assess our models on unseen data. \n",
+    "\n",
+    "We learned to build various regression models as well as how to assess them.\n",
+    "\n",
+    "We learned to participate in a Kaggle competition and how to collaborate with others via Teams, WhatsApp, Vanilla Forums and a Trello board."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
