Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -7772,9 +7772,9 @@
     "We imported, explored, cleaned and split the data for suitable use. Thereafter we built 7 multivariate regression models and assessed them all with unseen data. We also submitted our best model to Kaggle and have built an API and hosted it in EC2 in order to share our finding with the world.\n",
     "\n",
     "### 6.2. Our results\n",
-    "At the end of the day the Random Forest Model predicted the most accurately with an RMSE of only 0.40. \n",
+    "At the end of the day the Random Forest Model predicted the most accurately with an RMSE of only 0.40 as measured by the 20% unseen data and an RMSE of 1.05 as measured by Kaggle.\n",
     "\n",
-    "This model placed us 36th out of the 37 teams which participated in the Kaggle competition with the winning team achieving an RMSE of only 0.04. We are grateful that we could participate in this competition and to thereby encourage accurate model building.\n",
+    "This model placed us 36th out of the 37 teams which participated in the Kaggle competition with the winning team achieving an RMSE of only 0.004. We are grateful that we could participate in this competition and to thereby encourage accurate model building.\n",
     "\n",
     "### 6.3. What we learnt\n",
     "Through this excercise we learned how to prepare data for building and training machine learning models and to to split the data so that we can assess our models on unseen data. \n",
